--- a/k8petstore/web-server/static/index.html
+++ b/k8petstore/web-server/static/index.html
@@ -20,7 +20,7 @@
     <TABLE>
         <TR>
             <TD>
-                <div id="guestbook-entries">
+                <div id="k8petstore-entries">
                     <p>Waiting for database connection...This will get overwritten...</p>
                 </div>
             </TD>
@@ -30,7 +30,7 @@
                     <h1>k8-bps.</h1>
                 </div><br>
                 <div>
-                    <p><h2 id="guestbook-host-address"></h2></p>
+                    <p><h2 id="k8petstore-host-address"></h2></p>
                     <p><a href="/env">/env</a>
                         <a href="/info">/info</a></p>
                 </div>
